# mimi

./: .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  LICENSE  README.md  setup.py
.github/workflows/: test.yml
examples/: clemens.py  dynamic_dirichlet.py  example_le_cantilever_beam.py  jc_sr.py  jc_srt.py  lec.py  linear_elasticity_3d.py  linear_elasticity_contact.py  macro.py  macro_jc.py  macro_neohook.py  nl_contact.py  nl_contact_2.py  nl_contact_alm.py  nl_contact_jc.py  nl_contact_periodic.py  nonlinear_solid.py  p_contact_jc.py  plasticity_j2.py  plasticity_j2_jc.py  plasticity_j2_nl.py  s.py  stokes.py  stokes_dirichlet.py  toy_problem.py
mimi/: __init__.py  base.py
scripts/: npz_to_txt.py
src/: CMakeLists.txt
src/integrators/: elasticity.hpp  linear_elasticity.hpp  vector_diffusion.hpp  vector_mass.hpp
src/mimi/: CMakeLists.txt
src/mimi/coefficients/: nearest_distance.hpp
src/mimi/forms/: nonlinear.hpp  nonlinear_visco.hpp
src/mimi/integrators/: averaged_penalty_contact.hpp  integrator_utils.cpp  integrator_utils.hpp  linear_elasticity.hpp  material_hardening.hpp  material_utils.hpp  materials.hpp  mortar_contact.cpp  mortar_contact.hpp  nonlinear_base.cpp  nonlinear_base.hpp  nonlinear_solid.cpp  nonlinear_solid.hpp  nonlinear_visco_solid.hpp  penalty_contact.hpp  stokes.hpp  vector_diffusion.hpp  vector_mass.hpp
src/mimi/materials/: fluid_materials.hpp  material_hardening.hpp  material_state.hpp  material_utils.hpp  materials.cpp  materials.hpp
src/mimi/operators/: base.hpp  incompressible_fluid.hpp  linear_elasticity.hpp  nonlinear_solid.cpp  nonlinear_solid.hpp  nonlinear_visco_solid.hpp
src/mimi/py/: mimi.cpp  mimi_core.cpp  py_ad.cpp  py_boundary_conditions.cpp  py_ex2.cpp  py_ex2.hpp  py_fluid_material.cpp  py_hardening.cpp  py_le_cantilever_beam.cpp  py_le_cantilever_beam.hpp  py_linear_elasticity.cpp  py_linear_elasticity.hpp  py_material.cpp  py_nearest_distance.cpp  py_nonlinear_form.cpp  py_nonlinear_integrator.cpp  py_nonlinear_solid.cpp  py_nonlinear_solid.hpp  py_nonlinear_visco_solid.cpp  py_nonlinear_visco_solid.hpp  py_ode.cpp  py_runtime_communication.cpp  py_solid.cpp  py_solid.hpp  py_stokes.cpp  py_stokes.hpp  py_utils.hpp
src/mimi/solvers/: newton.cpp  newton.hpp  ode.cpp  ode.hpp
src/mimi/utils/: BS_thread_pool.hpp  BS_thread_pool_utils.hpp  ad.hpp  ad.inl  boundary_conditions.cpp  boundary_conditions.hpp  containers.hpp  lambda_and_mu.hpp  mfem_ext.cpp  mfem_ext.hpp  n_thread_exe.cpp  n_thread_exe.hpp  precomputed.cpp  precomputed.hpp  print.hpp  runtime_communication.hpp
src/operators/: base.hpp  linear_elasticity.hpp
src/py/: mimi.cpp  py_linear_elasticity.hpp  py_solid.hpp  py_utils.hpp
src/solvers/: newton.hpp
src/utils/: boundary_condition.hpp  containers.hpp  lamda_and_mu.hpp  n_thread_exe.hpp  print.hpp
tests/: test_mesh_refinement.py  test_nonlinear_solid.py  test_nthreads.py  test_pysolid.py
tests/csm_benchmark/: csm_bench.py  ref_csm3_l4_point_T1.txt  ref_csm3_l4_point_T2.txt  ref_csm3_l4_point_T3.txt  tail.mesh
tests/data/: balken.mesh  cube-nurbs-3.mesh  cube-nurbs.mesh  es.mesh  macro.mesh  sqn.mesh  square-nurbs-3.mesh  square-nurbs.mesh
tests/data/ref/j2_h1_p2/: x_0.txt  x_1.txt  x_2.txt  x_3.txt  x_4.txt  x_5.txt  x_6.txt  x_7.txt  x_8.txt  x_9.txt
tests/data/ref/j2_log_h1_p2/: x_0.txt  x_1.txt  x_2.txt  x_3.txt  x_4.txt  x_5.txt  x_6.txt  x_7.txt  x_8.txt  x_9.txt
tests/data/ref/j2_simo_h1_p2/: x_0.txt  x_1.txt  x_2.txt  x_3.txt  x_4.txt  x_5.txt  x_6.txt  x_7.txt  x_8.txt  x_9.txt
tests/data/ref/neohook_h1_p2/: x_0.txt  x_1.txt  x_2.txt  x_3.txt  x_4.txt  x_5.txt  x_6.txt  x_7.txt  x_8.txt  x_9.txt
tests/deform_jc/: box.mesh  press.py
